--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://wa.me/5583996999840?text=Ol%C3%A1!%20Quero%20que%20meu%20Insta%20comece%20a%20vender%20de%20verdade!" target="_blank" class="btn btn-secondary btn-pulse reveal">👉 Quero meu Insta vendendo</a>
                 </div>
                  <div class="hero-image reveal">
-                    <img src="https://i.imgur.com/8aVw8u8.png" alt="Celular com feed do Instagram animado">
+                    <img src="https://res.cloudinary.com/dwu4r8y1a/image/upload/v1754058520/20250801_1115_Smartphone_com_Feed_Vibrante_simple_compose_01k1jzp6afevp8etcay0dvev1s_sdqumn.png" alt="Celular com feed do Instagram profissional e vibrante">
                 </div>
             </div>
         </section>
